# Coconutis

./: LICENSE  Makefile  README.md  coconutis
sources/: CMakeLists.txt  main.cpp
sources/errors/: signal.h  str.h
